# MarketNews

./: .env.example  .gitignore  ProjectPlan.md  README.md  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: deploy-functions.yml  deploy-webapp.yml  main_harrysmarketnews.yml
scripts/: analyze_alert_eligibility.py  clear_analyses.py  e2e_live_pipeline.py  health_check.py  init_db.py  purge_articles.py  send_digest_once.py
src/: __init__.py
src/functions/: __init__.py  host.json  local.settings.json.example  requirements.txt
src/functions/poll_news/: __init__.py  function.json
src/functions/process_article/: __init__.py  function.json
src/functions/send_digest/: __init__.py  function.json
src/functions/shared/: config.py
src/functions/shared/database/: models.py
src/functions/shared/schemas/: __init__.py  analysis.py  queue_messages.py
src/functions/shared/services/: __init__.py  analyzers.py  discord.py  queue.py
src/shared/: __init__.py  config.py
src/shared/database/: __init__.py  models.py  session.py
src/shared/services/: firecrawl.py  http_client.py  news_api.py
src/webapp/: __init__.py  app.py  utils.py  wsgi.py
src/webapp/routes/: __init__.py  articles.py  digests.py
src/webapp/static/css/: style.css
src/webapp/static/js/: main.js
src/webapp/templates/: base.html
tests/: conftest.py  test_analysis_schema.py  test_analyzers_adapters.py  test_analyzers_run_all.py  test_discord_webhook_response.py  test_firecrawl.py  test_news_api.py  test_queue_messages.py  test_send_digest_logic.py  test_webapp_utils.py
(+3 files in other folders)
