[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketnews"
version = "0.1.0"
description = "Market news monitoring and analysis application."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Harry Gorden" }]
dependencies = [
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "httpx>=0.27.2",
  "azure-storage-queue>=12.9.0",
  "openai>=1.52.0",
  "anthropic>=0.39.0",
  "google-generativeai>=0.7.2",
  "flask>=3.0.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
  "mypy>=1.11.1"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"webapp" = ["templates/**/*.html", "static/**/*.css", "static/**/*.js"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]

